--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,15 +33,9 @@ set-option -g set-titles on
 set -g mode-keys vi
 set -g status-keys vi
 
-unbind-key h
-unbind-key j
-unbind-key k
-unbind-key l
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
 bind-key home choose-tree 
+# re enable <Leader>Ctrl-L clearing due to vim-tmux-navigator plugin
+bind C-l send-keys 'C-l'
 
 set -sg escape-time 0
 
@@ -52,7 +46,7 @@ bind-key r source-file ~/.tmux.conf
 ## statusline
 set -g status-interval 10
 set -g status-bg colour8
-set -g status-left '#[bg=colour5]#[fg=colour7]#{?client_prefix,#[bg=colour4],} # #S #[bg=colour8]#[fg=colour5]#{?client_prefix,#[fg=colour4],}▶#{?window_zoomed_flag, 🔍 ,}'
+set -g status-left '#[bg=colour208]#[fg=colour0]#{?client_prefix,#[bg=colour202],} # #S #[bg=colour8]#[fg=colour208]#{?client_prefix,#[fg=colour202],}▶#{?window_zoomed_flag, 🔍 ,}'
 set -g status-right '#(~/scripts/bash/battery.sh)#[fg=colour10]◀#[bg=colour10]#[fg=colour0] %b %d %H:%M '
 
 set -g window-status-current-format "#[fg=colour8]#[bg=colour10]▶#[fg=colour8]#[bg=colour10] #I|#[fg=colour0] #W #[fg=colour10]#[bg=colour8]▶"
@@ -67,5 +61,6 @@ set-option -g default-shell "/bin/bash"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run '~/.tmux/plugins/tpm/tpm'
