--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,7 @@ set -g mode-keys vi
 set -g status-keys vi
 
 bind-key home choose-tree 
-# re enable <Leader>Ctrl-L clearing due to vim-tmux-navigator plugin
+# rebind <leader><C-l> to clear screen as vim-tmux-navigator uses bind
 bind C-l send-keys 'C-l'
 
 set -sg escape-time 0
@@ -43,14 +43,15 @@ set -sg escape-time 0
 unbind-key r
 bind-key r source-file ~/.tmux.conf
 
+## NOW USES VIM :Tmuxline as of 18-11-19 
 ## statusline
-set -g status-interval 10
-set -g status-bg colour8
-set -g status-left '#[bg=colour208]#[fg=colour0]#{?client_prefix,#[bg=colour202],} # #S #[bg=colour8]#[fg=colour208]#{?client_prefix,#[fg=colour202],}▶#{?window_zoomed_flag, 🔍 ,}'
-set -g status-right '#(~/scripts/bash/battery.sh)#[fg=colour10]◀#[bg=colour10]#[fg=colour0] %b %d %H:%M '
+#set -g status-interval 10
+#set -g status-bg colour8
+#set -g status-left '#[bg=colour208]#[fg=colour0]#{?client_prefix,#[bg=colour202],} # #S #[bg=colour8]#[fg=colour208]#{?client_prefix,#[fg=colour202],}▶#{?window_zoomed_flag, 🔍 ,}'
+#set -g status-right '#(~/scripts/bash/battery.sh)#[fg=colour10]◀#[bg=colour10]#[fg=colour0] %b %d %H:%M '
 
-set -g window-status-current-format "#[fg=colour8]#[bg=colour10]▶#[fg=colour8]#[bg=colour10] #I|#[fg=colour0] #W #[fg=colour10]#[bg=colour8]▶"
-set -g window-status-format "#[fg=colour7]#[bg=colour8] #I|#[fg=colour7] #W"
+#set -g window-status-current-format "#[fg=colour8]#[bg=colour10]▶#[fg=colour8]#[bg=colour10] #I|#[fg=colour0] #W #[fg=colour10]#[bg=colour8]▶"
+#set -g window-status-format "#[fg=colour7]#[bg=colour8] #I|#[fg=colour7] #W"
 
 # colors at https://i.stack.imgur.com/e63et.png
 
