--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,14 +3,8 @@ set -g default-terminal "xterm-256color"
 # the only time indexing should ever start at 1
 set -g base-index 1
 
-# disable automatic window renaming but enable window renumbering
-set-window-option -g automatic-rename off
+# enable window renumbering
 set-option -g renumber-windows on
-
-# rebind-key prefix
-unbind-key C-b
-set -g prefix `
-bind-key ` send-prefix
 
 # split panes using | and - for ver and hor respectively
 bind-key | split-window -h -c "#{pane_current_path}" 
@@ -29,6 +23,9 @@ set -g mouse on
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
+# move status to centre
+set -g status-justify centre
+
 # vi like keys
 set -g mode-keys vi
 set -g status-keys vi
@@ -41,7 +38,7 @@ set -sg escape-time 0
 
 # reload source file
 unbind-key r
-bind-key r source-file ~/.tmux.conf
+bind-key r source-file ~/.tmux.conf 
 
 ## NOW USES VIM :Tmuxline as of 18-11-19 
 ## statusline
@@ -70,6 +67,18 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
+
 run '~/.tmux/plugins/tpm/tpm'
 
+# rebind-key prefix
+# moved down 2022-06-29 as interfering with vim-tmux-navigator 'previous pane'
+unbind-key C-b
+unbind-key \\
+bind-key \\ send-prefix
+set -g prefix \\
 
+
+## source tmuxline snapshot
+source-file ~/.tmux/tmuxline-snapshot-2022-03-16.conf
