--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
+set -sa terminal-overrides ",xterm*:RGB"
 
 # the only time indexing should ever start at 1
 set -g base-index 1
@@ -7,7 +8,7 @@ set -g base-index 1
 set-option -g renumber-windows on
 
 # split panes using | and - for ver and hor respectively
-bind-key | split-window -h -c "#{pane_current_path}" 
+bind-key | split-window -h -c "#{pane_current_path}"
 bind-key - split-window -v -c "#{pane_current_path}"
 unbind-key '"'
 unbind-key %
@@ -82,3 +83,6 @@ set -g prefix \\
 
 ## source tmuxline snapshot
 source-file ~/.tmux/tmuxline-snapshot-2022-03-16.conf
+
+set -g window-style 'fg=colour249,bg=color233'
+set -g window-active-style 'fg=colour252,bg=color234'
