--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,13 +9,20 @@ set-option -g renumber-windows on
 
 # split panes using | and - for ver and hor respectively
 bind-key | split-window -h -c "#{pane_current_path}"
-bind-key - split-window -v -c "#{pane_current_path}"
+bind-key - split-window -v -l 15 -b -c "#{pane_current_path}"
 unbind-key '"'
 unbind-key %
 
 # break pane from window: prefix + !
 # re-join pane to window: prefix + "
 bind-key '"' choose-window 'join-pane -t "%%"'
+
+# resize panes using prefix + hjkl
+unbind-key l
+bind-key -r h resize-pane -L 10
+bind-key -r j resize-pane -D 10
+bind-key -r k resize-pane -U 10
+bind-key -r l resize-pane -R 10
 
 # mouse support
 set -g mouse on
@@ -84,5 +91,11 @@ set -g prefix \\
 ## source tmuxline snapshot
 source-file ~/.tmux/tmuxline-snapshot-2022-03-16.conf
 
-set -g window-style 'fg=colour249,bg=color233'
-set -g window-active-style 'fg=colour252,bg=color234'
+#set -g window-style 'bg=color233'
+#set -g window-active-style 'bg=color234'
+# hex colours below for kanagawa theme 2024-06-25
+set -g window-style 'bg=#141419'
+set -g window-active-style 'bg=#17171e'
+
+# resize panes relatively on screen resize (e.g. monitor change) 2024-01-04
+set-hook -g client-resized resize-pane
