--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,11 @@
-set -g default-terminal "screen-256color"
-set -sa terminal-overrides ",xterm*:RGB"
+#set -g default-terminal "screen-256color"
+#set -sa terminal-overrides ",xterm*:RGB"
+
+# alacritty full terminal colors
+#set -g default-terminal "alacritty"
+set -g default-terminal "alacritty"
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # colored underscores
+set -as terminal-overrides ',alacritty:RGB' # true-color support
 
 # the only time indexing should ever start at 1
 set -g base-index 1
@@ -38,7 +44,7 @@ set -g status-justify centre
 set -g mode-keys vi
 set -g status-keys vi
 
-bind-key home choose-tree 
+bind-key home choose-tree
 # rebind <leader><C-l> to clear screen as vim-tmux-navigator uses bind
 bind C-l send-keys 'C-l'
 
@@ -46,9 +52,9 @@ set -sg escape-time 0
 
 # reload source file
 unbind-key r
-bind-key r source-file ~/.tmux.conf 
+bind-key r source-file ~/.tmux.conf
 
-## NOW USES VIM :Tmuxline as of 18-11-19 
+## NOW USES VIM :Tmuxline as of 18-11-19
 ## statusline
 #set -g status-interval 10
 #set -g status-bg colour8
@@ -89,13 +95,15 @@ set -g prefix \\
 
 
 ## source tmuxline snapshot
-source-file ~/.tmux/tmuxline-snapshot-2022-03-16.conf
+source-file ~/.tmux/tmuxline-snapshot-2025-03-05.conf
 
 #set -g window-style 'bg=color233'
 #set -g window-active-style 'bg=color234'
-# hex colours below for kanagawa theme 2024-06-25
+# hex colours below for kanagawa wave theme 2024-06-25
 set -g window-style 'bg=#141419'
 set -g window-active-style 'bg=#17171e'
 
 # resize panes relatively on screen resize (e.g. monitor change) 2024-01-04
 set-hook -g client-resized resize-pane
+
+set -g set-clipboard on
